feat: calculate refund